Swagger fixes and bulk api addition
